--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+/* Other global styles here */
+
+/* Leave src/styles.css as unresolved */
+*,
+*::before,
+*::after {
+  border-radius: 0px !important;
+}
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
